--- a/playing.html
+++ b/playing.html
@@ -150,11 +150,15 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Aug 3, 2022)</h4>
+	<h4>Now Playing</br>(Updated Aug 6, 2022)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/card-crawl-adventure/id1571091032?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d3/55/d4/d355d4c7-ccc4-7605-424e-42b0511c5776/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Card Crawl Adventure</a></br>Free</br>Arnold Rauers</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/scourgebringer/id1552864378?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/a2/1c/90/a21c90ed-8549-6f0a-4777-9decb6c0865b/AppIcons-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>ScourgeBringer</a></br>$6.99</br>Plug In Digital</div>
+<div class="column"><a href="https://apps.apple.com/us/app/everdell/id1580626436?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/a0/8d/f7/a08df741-ab76-d86d-37a2-55d690dfced8/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Everdell</a></br>$9.99</br>Dire Wolf Digital</div>
+<div class="column"><a href="https://apps.apple.com/us/app/papers-please/id935216956?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/e4/41/e3/e441e3bd-498b-9ddc-145d-b7bdae8c8044/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Papers, Please</a></br>$4.99</br>3909</div>
+<div class="column"><a href="https://apps.apple.com/us/app/hindsight-game/id1552046093?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/3f/71/4f/3f714fda-ebb0-1040-25ce-158cbb3eb6fc/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Hindsight Game</a></br>$4.99</br>Annapurna Interactive</div>
+<div class="column"><a href="https://apps.apple.com/us/app/card-crawl-adventure/id1571091032?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d3/55/d4/d355d4c7-ccc4-7605-424e-42b0511c5776/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Card Crawl Adventure</a></br>Free</br>Arnold Rauers</div>
 <div class="column"><a href="https://apps.apple.com/us/app/descenders/id1604675493?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/33/66/08/3366080d-6994-554b-bccc-fc6a4740a5c8/AppIcon-1x_U007emarketing-0-9-0-85-220.png/512x512bb.png"></p><p>Descenders</a></br>$9.99</br>Noodlecake</div>
 <div class="column"><a href="https://apps.apple.com/us/app/pawnbarian/id1510583444?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Pawnbarian</a></br>Free</br>Jan Wojtecki</div>
 <div class="column"><a href="https://apps.apple.com/us/app/paragon-pioneers/id1599308482?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/3f/64/a5/3f64a521-2b68-0df9-dec8-54e7b7117ceb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Paragon Pioneers</a></br>$3.99</br>Tobias Tenbusch</div>
