--- a/playing-archive-11-10-22.html
+++ b/playing-archive-11-10-22.html
@@ -150,12 +150,11 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Nov 10, 2022)</h4>
+	<h4>Now Playing</br>(Updated Oct 29, 2022)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/opus-echo-of-starsong/id1604771334?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/e1/68/1b/e1681b22-1e6f-6683-6bfe-d6a86d490970/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>OPUS: Echo of Starsong</a></br></br>SIGONO INC.</div>
-<div class="column"><a href="https://apps.apple.com/us/app/dysmantle/id1403738209?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/9e/da/1e/9eda1e5b-249b-ae9c-a61d-a3b143187e89/AppIcon-0-0-1x_U007emarketing-0-0-0-4-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>DYSMANTLE</a></br>$9.99</br>10tons Ltd</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/bossgame-the-boss-is-my-heart/id1644439303?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/3d/f9/35/3df93583-acc3-2668-1281-7507f59175e7/AppIcon-1x_U007emarketing-0-5-0-85-220.png/512x512bb.png"></p><p>Bossgame: The Boss Is My Heart</a></br>$6.99</br>Lilycore Games</div>
 <div class="column"><a href="https://apps.apple.com/us/app/sigma-theory/id1492483961?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/fa/ee/45/faee458c-7ad2-e89b-31d0-b5ab44009d93/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Sigma Theory</a></br>$6.99</br>Plug In Digital</div>
 <div class="column"><a href="https://apps.apple.com/us/app/monster-train/id1577392165?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple112/v4/97/ab/da/97abda90-89e9-4c4f-f934-ad7140b388b4/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Monster Train</a></br>$9.99</br>Good Shepherd Entertainment</div>
 <div class="column"><a href="https://apps.apple.com/us/app/simulacra-3/id1607060727?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple112/v4/70/d5/7b/70d57b4d-737b-d57d-0e88-b8ed3f418bd6/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>SIMULACRA 3</a></br>$7.99</br>Kaigan Games OÜ</div>
