--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <title>Linktree</title>
+    <title>Personal Links</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body class="grad1">
