--- a/music-2022.html
+++ b/music-2022.html
@@ -88,7 +88,7 @@ body {
   visibility: none; opacity:0;
   transition: opacity 0.3s;
 }
-.column:hover .hovecap {
+.column img:hover .hovercap {
   visibility: visible; opacity: 1;
 }   
 
