--- a/music-2022.html
+++ b/music-2022.html
@@ -173,12 +173,18 @@ body {
 }
 
 /* Trying to make an onclick reveal */
-#columnControl {
-  display:none;
-}
-.column:active {
-  visibility: none; opacity: 0;
-} 
+/* #columnControl {
+/*  display: none;
+/*  opacity: 0;
+/*  visibility: none; opacity: 0;
+/*}
+/*.column:active {
+/*  visibility: none; opacity: 0;
+/*}
+/*input[type="checkbox"] {
+/*  display:none;
+/*  opacity:0;
+/*} /*
 
 </style>
 <body>
@@ -190,7 +196,7 @@ body {
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><input type="checkbox" id="columnControl" /><label class="column" for="columnControl"><img src="https://is2-ssl.mzstatic.com/image/thumb/Music112/v4/05/05/f3/0505f338-9873-feb4-af7f-27a470405e5f/196589246974.jpg/512x512bb.png"><div class="hovercap"><a href="https://odesli.co/embed/?url=https%3A%2F%2Falbum.link%2Fy%2FPLzrMYyHmLhGA9MJNeIMOPrciPVTbnk48M&theme=dark">Beyonce?</a></div></label></div>
+<div class="row"><div class="column"><!-- input type="checkbox" id="columnControl" /><label class="column" for="columnControl" --><img src="https://is2-ssl.mzstatic.com/image/thumb/Music112/v4/05/05/f3/0505f338-9873-feb4-af7f-27a470405e5f/196589246974.jpg/512x512bb.png"><div class="hovercap"><a href="https://odesli.co/embed/?url=https%3A%2F%2Falbum.link%2Fy%2FPLzrMYyHmLhGA9MJNeIMOPrciPVTbnk48M&theme=dark" target="_blank">Renaissance</br>Beyonce</a></div></label></div>
 <div class="column"><a href="https://apps.apple.com/us/app/vampire-survivors/id6444525702?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/df/d4/07/dfd4073a-bbd2-ad28-4a64-835a5c166e04/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></div>
 <div class="column"><a href="https://apps.apple.com/us/app/afterplace/id1539778232?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/d9/cd/63/d9cd63d8-057c-f17c-e894-d77d88b09935/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></div>
 <div class="column"><a href="https://apps.apple.com/us/app/finding-paradise/id1619867109?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/ed/ba/b6/edbab664-3089-d0af-d60b-7e985a162664/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></div>
