--- a/live.html
+++ b/live.html
@@ -1,35 +1,11 @@
 <html>
 	<style>
 	
-.video-wrap { 
-    position: relative; 
-    margin: 0 auto 20px;
-    max-width: 700px;
-} 
-
-.video-wrap:before {
-    content: '';
-    display: block;
-    position: relative;
-    padding-bottom: 56.25%;
-}
-
-.video-wrap iframe, 
-.video-wrap object, 
-.video-wrap embed { 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
+.video {
+	aspect-ratio: 16 / 9;
+	max-width: 100%;
+	height: auto;
 }	
-	
-.video-old {
-  aspect-ratio: 16 / 9;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
 </style>
 	<head>
 		<title>Small Screen Live</title>
@@ -37,9 +13,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-
-<p align="center"><div class="video-wrap"><iframe data-lazyloaded="1" src="about:blank" data-src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" height="315" frameborder="0"></iframe><noscript><iframe title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" height="315" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></noscript></div></p>
-<div class="video-wrap"><iframe data-lazyloaded="1" src="about:blank" data-src="https://www.youtube.com/embed/wH-by1ydBTM" width="560" height="315" frameborder="0"></iframe><noscript><iframe src="https://www.youtube.com/embed/wH-by1ydBTM" width="560" height="315" frameborder="0"></iframe></noscript></div>
+<body>
+<p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-
+<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
+					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; namestolen.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
+				</ul>
+			</footer>
+</body>
+</html>
 </html>
